# telegram-shop

./: .gitignore  README.md  db_connect.py  db_queries.py  keyboards.py  main.py  main_t.py  pyproject.toml  script.py  token_telegram.py
callback_data/: callbacks.py
handlers/: __init__.py
handlers/admin/: __init__.py  add_category.py  add_data.py  add_good.py  add_post.py  admin_manage.py
handlers/user/: __init__.py  category_handler.py  product_handler.py  user_profile.py
keyboards/: inline.py  reply.py
main_routers/: add_category.py  add_funds.py  add_good.py  add_post.py  admin.py  goods.py  profile.py
middleware/: db_middleware.py
services/: db_queries.py
states/: add_admin_state.py  add_category_state.py  add_data_state.py  add_good_state.py  add_post_state.py
