[project]
name = "123321"
version = "0.1.0"
description = ""
authors = [
    {name = "xxlcxsh",email = "xxlcxsh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "yookassa (>=3.5.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "123321", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
